--- a/style.css
+++ b/style.css
@@ -12,13 +12,14 @@
     align-items: center;
 }
 .picker{
-   background-color: cadetblue;
-   width: 400px;
+   background-color: rgb(198, 217, 218);
+   width: 500px;
    height: fit-content;
    padding: 40px;
    display: flex;
    flex-direction: column;
    align-items: center;
+   border-radius: 5px;
 }
 .btn {
    max-width: 200px;
@@ -35,17 +36,16 @@ header {
     justify-content: space-between;
     width:100%;
 }
-header span{
+header span a{
     color:rgb(13, 25, 159);
     cursor: pointer;
+    text-decoration: none;
 }
 .all-colors{
-    display: flex;
-   flex-wrap: wrap;
+    display: grid;
+   grid-template-columns: auto auto auto;
   margin:10px;
   gap:10px;
-  justify-content: space-evenly;
-  align-items: center;
 }
 .all-colors .color{
     display:flex;
